objects/Bicycle__c.object
<CustomObject>
    <fields>
        <fullName>Price__c</fullName>
        <description>Using to test CI Job.</description>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Edition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Special Edition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMX</fullName>
                    <label>BMX Version 2</label>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Road</fullName>
                </value>
                <value>
                    <fullName>Tandem</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Bicycle</label>
    <nameField>
        <label>Bicycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bicycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>